# vgamepad

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
readme/: linux.md
test/: _win_xinput.py  test_VDS4Gamepad.py  test_VX360Gamepad.py  test_gamepads.py
vgamepad/: __init__.py
vgamepad/lin/: virtual_gamepad.py
vgamepad/linux/: virtual_gamepad.py
vgamepad/win/: vigem_client.py  vigem_commons.py  vigem_install.py  virtual_gamepad.py
